<resources>
    <string name="app_name">LockMyDevice</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="unlock_title">HELLO!</string>
    <string name="unlock_button">Unlock Device</string>
    <string name="prompt_account_email">Enter email id</string>
    <string name="prompt_account_password">Enter password</string>
    <string name="bad_credentials">Login Error</string>
    <string name="search_hint">Search Devices</string>
    <string name="search_label">Search Label</string>
    <string name="device_info"><b>IMEI- </b> %1$s \n
                               <b>Model- </b> %2$s
    </string>

    <string name="device_info_imei"><b>IMEI- </b> %1$s</string>
    <string name="device_info_model"><b>Model- </b> %1$s</string>
    <string name="device_info_os_version"><b>OS Version- </b> %1$s</string>
    <string name="device_info_serial_number"><b>Serial Number- </b> %1$s</string>
    <string name="device_info_itexico_id"><b>iTexico ID- </b> %1$s</string>
    <string name="device_info_owner_email_id"><b>Owner Email ID- </b> %1$s</string>
    <string name="device_info_owner_username"><b>Owner Username- </b> %1$s</string>

    <string name="device_info_last_login"><b>Last Login:</b>\n%1$s\n%2$s</string>
    <!--Login info dialog -->
    <string name="dialog_postive_buttton_id">OK</string>
    <string name="dialog_title">Info</string>
    <string name="dialog_error_email_field_empty">Email can\'t be empty</string>
    <string name="dialog_error_password_field_empty">Password can\'t be empty</string>
    <string name="dialog_error_email_field_invalid">Enter valid Email id</string>

    <!-- Permission for Accessing Phone Info-->
    <string name="permission_dialog_title">Permission Info</string>
    <string name="permission_dialog_message">Allow access to Read phone state to get Device information</string>
    <string name="email_entry">Email</string>
    <string name="password_entry">Password</string>
    <string name="get_me_in">Yeah, get me in</string>
    <string name="nope">Nope</string>
    <string name="hello">Hello </string>
    <string name="hello_user_exclamatorty_mark">!</string>
    <string name="device">DEVICE</string>
    <string name="itexico_id">ITEXICO ID</string>
    <string name="serial_number">SERIAL NUMBER</string>
    <string name="os_version">OS VERSION</string>
    <string name="string_empty" />
    <string name="is_this_you">is this you</string>

</resources>
