<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/devices"
    android:orientation="vertical"
    tools:context=".activities.UnlockActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background_color"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/logInSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/email_entry"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:hint="@string/prompt_account_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="shail@google.com"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/password_entry"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:drawableRight="@drawable/page_1"
                android:hint="@string/prompt_account_password"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="1234"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/unlockButton"
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_rectangle"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/unlock_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unlockSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="70dp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="normal" />

            <com.itexico.utilities.lockmydevice.views.CircularImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border="true"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="1dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#3f51b5"
                app:civ_shadow_radius="1" />

            <TextView
                android:id="@+id/user_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/is_this_you"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/yesIAm"
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_rectangle"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/get_me_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noImNot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/nope"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <View
                android:layout_width="50dp"
                android:layout_height="@dimen/space_2dp"
                android:layout_gravity="center"
                android:background="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
