<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/device_info_details_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/group" />

    <TextView
        android:id="@+id/device_info_details_model_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="100dp"
        android:text="Samsung S5"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/device_info_details_last_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/device_info_details_model_number"
        android:layout_below="@+id/device_info_details_model_number"
        android:layout_marginTop="29dp"
        android:text="Last Login:\nshail.singh@itexico.net\non July 19,2016 at 09:12PM"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <com.itexico.utilities.lockmydevice.views.CircularImageView
        android:id="@+id/device_info_details_user_logo"
        android:layout_width="@dimen/device_info_user_profile_logo_width"
        android:layout_height="@dimen/device_info_user_profile_logo_width"
        android:layout_alignBottom="@+id/device_info_details_last_login"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_launcher"
        app:civ_border="true"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#3f51b5"
        app:civ_shadow_radius="1"
        android:layout_marginRight="15dp" />


    <TextView
        android:id="@+id/device_info_details_device_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_logo"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/device"
        android:textColor="@color/device_info_details_device_type"
        android:textSize="12sp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/device_info_details_device_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_device_type"
        android:layout_marginLeft="70dp"
        android:text="Phone"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/device_info_details_itexico_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_device_type_value"
        android:layout_marginLeft="70dp"
        android:text="@string/itexico_id"
        android:textColor="@color/device_info_details_device_type"
        android:textSize="12sp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/device_info_details_itexico_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_itexico_id"
        android:layout_marginLeft="70dp"
        android:text="i00099929"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/device_info_details_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_itexico_id_value"
        android:layout_marginLeft="70dp"
        android:text="@string/serial_number"
        android:textColor="@color/device_info_details_device_type"
        android:textSize="12sp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/device_info_details_serial_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_serial_number"
        android:layout_marginLeft="70dp"
        android:text="940349394398988"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/device_info_details_os_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_info_details_serial_number_value"
        android:layout_marginLeft="70dp"
        android:text="@string/os_version"
        android:textColor="@color/device_info_details_device_type"
        android:textSize="12sp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/device_info_details_os_version_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_details_os_version"
        android:layout_marginLeft="70dp"
        android:text="6.0.1"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <!--<TextView
        android:id="@+id/device_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />

    <TextView
        android:id="@+id/device_os_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />

    <TextView
        android:id="@+id/device_serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />

    <TextView
        android:id="@+id/device_itexico_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />

    <TextView
        android:id="@+id/device_owner_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />

    <TextView
        android:id="@+id/device_owner_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/auction_title" />-->
</RelativeLayout>








